--- a/RASD/config.tex
+++ b/RASD/config.tex
@@ -8,13 +8,13 @@
 \usepackage[utf8]{inputenc}
 % \usepackage[italian]{babel}
 \usepackage{graphicx}
-\graphicspath{ {immagini/} }
+\graphicspath{ {Images/} }
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{enumerate}
 \usepackage{array}
 \usepackage{tabularx}
-
+\usepackage{float}
 \usepackage[a4paper,width=150mm,top=30mm,bottom=30mm,left=30mm,right=30mm,bindingoffset=6mm]{geometry}
 \usepackage{fancyhdr}
 \linespread{1.3}\selectfont
