Finish Scenarios, Add Use cases

--- a/RASD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
+++ b/RASD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
@@ -19,4 +19,5 @@
   \item {[Dn]}: n-th domain assumption;
   \item {[Rn]}: n-th functional requirements;
   \item MDS: Most Dangerous Street;
+  \item LSA: Local System Administrator;
 \end{itemize}
