--- a/RASD/Sections/3-Specific_Requirements/Functional_requirements/Scenarios.tex
+++ b/RASD/Sections/3-Specific_Requirements/Functional_requirements/Scenarios.tex
@@ -17,5 +17,6 @@ Leon is a newly hired police technician for the Berlin police department. For hi
 \subsubsection{Scenario 6}
 Daniele is the local system administrator of the Genova police department and he is responsible of dispatching the patrols. He decides that he wants to schedule the officers in a more intelligent way. To do that he consults the SafeStreets report database by logging in the web application. He would like to send the more experienced officers to areas in which there is a high number of violations categorized as "crash violations" whereas he would like to assign regular officers to other streets with an high frequency of violation of any category. In order to find out those streets he write down a query and execute it via the web application; after some seconds the interface displays the desired results, therefore he is able to schedule the patrols as he wants. Daniele would also like to communicate to all the officers which are the 10 cars that committed the highest number of violations in the city. To do that he once again performs a query on the SafeStreets web application searching for the 10 car plates with the highest rate of violations.
 
-
-% operatore pubblico che chiede per gli interventi suggeriti dal sistema (advanced function)
+% TODO: check if this is good enough
+\subsubsection{Scenario 7}
+Robert is the civil councillor of his city and as a new year project he would like to find out which are the possible interventions that he can perform on the city streets in order to provide a more safe circulation. Robert has limited budget so in order to find out which is the optimal intervention to do on the streets he kindly asks to a friend that works in the police department of the city to retrieve some suggestions using the newly arrived SafeStreets system. Robert knows that the SafeStreets system crosses the data offered by the municipality about car accidents with its own information about violations happening in the city. The system finds out that there is a relation between car accidents and unsafe parking in zones near biking lanes so to limit the number of incidents/violations the system suggests to build barriers that divide the bike lane from the street. Robert likes the idea and start to work on a plan that he will propose to his manager.
