--- a/RASD/config.tex
+++ b/RASD/config.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt]{report}
+% \usepackage{showframe} 
 % \usepackage{minted}
 \usepackage{xcolor}
 \definecolor{light-gray}{rgb}{0.9,0.9,0.9}
@@ -30,3 +31,5 @@
     linkcolor=black,
     urlcolor=black
 }
+
+\usepackage{enumitem}
