--- a/RASD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
+++ b/RASD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
@@ -1,6 +1,6 @@
 \subsection{Definitions}
 \begin{itemize}
-  \item \textit{Most Dangerous Streets}: Streets with the highest frequency of violation reports;
+  \item \textit{Most Dangerous Streets}: Streets with the highest frequency of violation reports.
 \end{itemize}
 
 \subsection{Acronyms}
@@ -20,4 +20,5 @@
   \item {[Rn]}: n-th functional requirements;
   \item MDS: Most Dangerous Street;
   \item LSA: Local System Administrator;
+  \item PT: Police Technician.
 \end{itemize}
